--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,17 @@
 #main {
-  position: absolute;
+  position: relative;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  top: 10px;
-  font-size: 30px;
+  font-size: 25px;
+  text-decoration: none;
+  background-color: wheat;
+  border-radius: 5px;
+  height: 40px;
+}
+a{
+  text-decoration: inherit;
+  color: inherit;
 }
