--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,16 @@
-#main {
-  position: relative;
+a {
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-size: 25px;
-  text-decoration: none;
-  background-color: wheat;
-  border-radius: 5px;
-  height: 40px;
-}
-a{
   text-decoration: inherit;
   color: inherit;
+  text-align: center;
+}
+
+#page {
+  width: 40%;
+  font-size: 25px;
+  border-radius: 80px;
+  height: 40px;
+  background-color: wheat;
 }
