--- a/src/app/data-table/data-table.component.scss
+++ b/src/app/data-table/data-table.component.scss
@@ -1,8 +1,23 @@
 .full-width-table {
   width: 100%;
+  -webkit-box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.4);
+  box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.4);
 }
 
 #table {
+  padding-top: 60px;
   display: flex;
   justify-content: center;
+}
+
+.mat-column-id {
+  width: 32px;
+  border-right: 1px solid currentColor;
+  padding-right: 24px;
+  text-align: center;
+}
+
+.mat-column-name {
+  padding-left: 16px;
+  font-size: 20px;
 }
