--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* You can add global styles to this file, and also import other style files */
+/*Color Palette*/
+
+$dark-theme-background : #1C658C;
+$light-theme-background: #398AB9;
+$element-background : #EEEEEE;
+$beige-button-color: #D8D2CB;
+$blue-gray:#7C99AC;
