--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<a href="/"><span id="page">[ Budget Holder ]</span></a>
+<a href="/"><span id="page"> Budget Holder </span></a>
 <router-outlet></router-outlet>
