--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,1 +1,4 @@
-<p>landing-page works!</p>
+<h1>Welcome to Budeget Holder!</h1>
+<p>Controlling your money starts here!</p>
+<button type="button" id="registerBtn" onclick="location.href = 'register';">Register</button>
+
