--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,3 +2,11 @@
 <p>Controlling your money starts here!</p>
 <button type="button" id="registerBtn" onclick="location.href = 'register';">Register</button>
 
+<form id="loginForm">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name"><br><br>
+  <label for="pass">Password:</label>
+  <input type="password" id="pass" name="pass">
+</form>
+
+<button type="submit" form="loginForm" id="LoginBtn" onclick=>Login</button>
