--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,4 @@
 a {
-  margin-top: 10px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -9,9 +8,9 @@ a {
 }
 
 #page {
-  width: 40%;
+  width: 300px;
   font-size: 25px;
-  border-radius: 80px;
-  height: 40px;
+  border-radius: 0 0 50% 50% ;
+  height: 60px;
   background-color: wheat;
 }
