--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,7 @@ $light-theme-background: #398AB9;
 $element-background : #EEEEEE;
 $beige-button-color: #D8D2CB;
 $blue-gray:#7C99AC;
+
+body{
+  background-color: $light-theme-background;
+}
