--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,12 +1,17 @@
 @import "src/styles";
 
+.registerFormWrapper{
+  display: flex;
+  justify-content: center;
+}
+
 #landingWrapper{
-  width: 40rem;
+  width: 400px;
   h1{
-    color: $beige-button-color;
-    font-size: 5rem;
-    span{
-      font-weight: bold;
-    }
+    font-size: 45px;
+  }
+  span{
+    font-weight: bold;
   }
 }
+
