--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
 <div id="landingWrapper">
-  <h1>Welcome to <span>Budget Holder!</span></h1>
+  <h1>Welcome to <span>Budget-Holder!</span></h1>
   <p>Controlling your money starts here!</p>
+  <br>or<br>
   <button type="button" id="registerBtn" onclick="location.href = 'register';">Register</button>
 </div>
 <div class="registerFormWrapper">
