--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,18 +1,26 @@
 @import "src/styles";
 
-.registerFormWrapper{
+.registerFormWrapper {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  position: absolute;
+  top: 100px;
 }
 
-#landingWrapper{
+#landingWrapper {
+  text-align: center;
   width: 400px;
-  h1{
+  margin-top: 50px;
+  h1 {
     font-size: 45px;
   }
-  span{
+
+  span {
     font-weight: bold;
+  }
+
+  p {
+    font-size: 20px;
   }
 }
 
