--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -4,13 +4,17 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 100px;
+  top: 450px;
 }
 
 #landingWrapper {
   text-align: center;
-  width: 400px;
   margin-top: 50px;
+
+  #registerBtn {
+    margin: 20px 0 20px 0;
+  }
+
   h1 {
     font-size: 45px;
   }
@@ -22,5 +26,12 @@
   p {
     font-size: 20px;
   }
+}
+
+.registerFormWrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
