--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -25,13 +25,13 @@
         </label>
         <input
           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-          id="password" type="password" placeholder="******************">
-        <p class="text-red-500 text-xs italic hidden">Please choose a password.</p>
+          id="passwordInput" type="password" placeholder="******************">
+        <p class="text-red-500 text-xs italic hidden" id="wrongPass">Please choose a password.</p>
       </div>
       <div class="flex items-center justify-between">
         <button
           class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-          type="button" (click)="signingFunc();" id="signingBtn">
+          type="button" (click)="signingFunc()">
           Sign In
         </button>
         <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
