--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -41,18 +41,6 @@
     </form>
   </div>
 </section>
-<section id="blobs">
-  <svg id="visual" viewBox="0 0 960 540" width="960" height="540" xmlns="http://www.w3.org/2000/svg"
-       xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-    <g transform="translate(460.96222784962686 261.78609765868737)">
-      <path id="blob1"
-        d="M161.8 -152.6C196.3 -127.3 201.6 -63.6 191 -10.6C180.4 42.4 153.9 84.9 119.4 121.5C84.9 158.2 42.4 189.1 4.9 184.1C-32.5 179.2 -65.1 138.4 -87.6 101.7C-110.1 65.1 -122.5 32.5 -137.4 -14.8C-152.2 -62.2 -169.5 -124.5 -147 -149.8C-124.5 -175.1 -62.2 -163.6 0.7 -164.3C63.6 -165 127.3 -177.9 161.8 -152.6"
-        fill="#398AB9"></path>
-    </g>
-    <g transform="translate(497.8856836421079 273.2049949623802)">
-      <path id="blob2"
-        d="M89.5 -88.1C115.3 -63.6 135.2 -31.8 140.1 4.9C145.1 41.7 135.1 83.4 109.3 113.3C83.4 143.1 41.7 161.1 2.9 158.1C-35.8 155.2 -71.7 131.3 -100.7 101.5C-129.7 71.7 -151.8 35.8 -165.7 -13.9C-179.6 -63.6 -185.3 -127.3 -156.3 -151.8C-127.3 -176.3 -63.6 -161.6 -15.9 -145.7C31.8 -129.8 63.6 -112.6 89.5 -88.1"
-        fill="#398AB9"></path>
-    </g>
-  </svg>
-</section>
+<div class="bg">
+
+</div>
