--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -3,7 +3,6 @@
 .registerFormWrapper {
   display: flex;
   justify-content: center;
-  position: absolute;
   top: 450px;
 }
 
@@ -35,12 +34,30 @@
   justify-content: center;
 }
 
-#blobs{
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
+.bg {
+  z-index: -1;
+  position:fixed;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  background-size: 300% 300%;
+  background-image: linear-gradient(-45deg, rgba(59, 173, 227, 1) 0%, rgba(87, 111, 230, 1) 25%, rgba(152, 68, 183, 1) 51%, rgba(255, 53, 127, 1) 100%);
+  animation: AnimateBG 10s ease infinite;
 }
+@keyframes AnimateBG {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 
