--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -7,6 +7,7 @@
   </button>
   <br>or<br>
 </section>
+<img src="/assets/money_man.png" alt="Money man" width="500" height="600" id="moneyMan">
 <section class="registerFormWrapper">
   <div class="w-full max-w-xs registerForm">
     <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
