--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,47 +1,48 @@
-<section id="landingWrapper">
-  <h1>Welcome to <span>Budget-Holder!</span></h1>
-  <p>Controlling your money starts here!</p>
-  <button type="button" id="registerBtn"
-          class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-          onclick="location.href = 'register';">Register
-  </button>
-  <br>or<br>
-</section>
-<img src="/assets/money_man.png" alt="Money man" width="500" height="600" id="moneyMan">
-<section class="registerFormWrapper">
-  <div class="w-full max-w-xs registerForm">
-    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-      <span class="bg-center text-gray-900 text-lg font-bold mb-4">Login</span>
-      <div class="mb-4">
-        <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
-          Username
-        </label>
-        <input
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-          id="username" type="text" placeholder="Username">
-      </div>
-      <div class="mb-6">
-        <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
-          Password
-        </label>
-        <input
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-          id="passwordInput" type="password" placeholder="******************">
-        <p class="text-red-500 text-xs italic hidden" id="wrongPass">Please choose a password.</p>
-      </div>
-      <div class="flex items-center justify-between">
-        <button
-          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-          type="button" (click)="signingFunc()">
-          Sign In
-        </button>
-        <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
-          Forgot Password?
-        </a>
-      </div>
-    </form>
-  </div>
-</section>
-<div class="bg">
+<div class="container mx-auto px-2">
+  <section id="landingWrapper">
+    <h1>Welcome to <span>Budget-Holder!</span></h1>
+    <p>Controlling your money starts here!</p>
+    <button type="button" id="registerBtn"
+            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
+            onclick="location.href = 'register';">Register
+    </button>
+    <br>or<br>
+  </section>
+  <section class="registerFormWrapper">
+    <div class="w-full max-w-xs registerForm">
+      <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <span class="bg-center text-gray-900 text-lg font-bold mb-4">Login</span>
+        <div class="mb-4">
+          <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
+            Username
+          </label>
+          <input
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            id="username" type="text" placeholder="Username">
+        </div>
+        <div class="mb-6">
+          <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
+            Password
+          </label>
+          <input
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+            id="passwordInput" type="password" placeholder="******************">
+          <p class="text-red-500 text-xs italic hidden" id="wrongPass">Please choose a password.</p>
+        </div>
+        <div class="flex items-center justify-between">
+          <button
+            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            type="button" (click)="signingFunc()">
+            Sign In
+          </button>
+          <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
+            Forgot Password?
+          </a>
+        </div>
+      </form>
+    </div>
+  </section>
+  <div class="bg">
 
+  </div>
 </div>
