landing for desktop

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-2">
+<div class="container mx-auto">
   <section id="landingWrapper">
     <h1>Welcome to <span>Budget-Holder!</span></h1>
     <p>Controlling your money starts here!</p>
