--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -28,7 +28,6 @@
 
 .registerFormWrapper {
   margin-top: 15px;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -61,12 +60,15 @@
 }
 
 @media screen and (min-width: 600px) {
-  #landingWrapper{
+  #landingWrapper, .registerFormWrapper{
     position: absolute;
     top: 35%;
   }
   .registerFormWrapper{
-
+    left: 60%;
+  }
+  .container{
+    width: 1000px;
   }
 }
 
