--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -44,7 +44,7 @@
   align-items: center;
   justify-content: center;
   background-size: 300% 300%;
-  background-image: linear-gradient(90deg, #398ab9, #498db6, #5790b4, #6392b1, #6e95af, #6c92ab, #698fa8, #678ca4, #57829e, #467898, #346f92, #1c658c);
+  background-image: linear-gradient(to right, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
   animation: AnimateBG 5s ease infinite;
 }
 @keyframes AnimateBG {
