--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,12 +1,12 @@
 <div class="container mx-auto">
-  <section id="landingWrapper">
-    <h1>Welcome to <span>Budget-Holder!</span></h1>
+  <section id="landingWrapper" class="shadow-2xl rounded">
+    <h1>Welcome to <span>Hold-Budget!</span></h1>
     <p>Controlling your money starts here!</p>
+    <p>Hold-Budget is a free tool for save and control your money in an easy way. </p>
     <button type="button" id="registerBtn"
             class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
             onclick="location.href = 'register';">Register
     </button>
-    <br>or<br>
   </section>
   <section class="registerFormWrapper">
     <div class="w-full max-w-xs registerForm">
