--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/*Color Palette*/
+
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@700&family=Oxygen:wght@300;700&family=Pacifico&display=swap');/*Color Palette*/
 
 $dark-theme-background : #1C658C;
 $light-theme-background: #398AB9;
