--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<a href="/" id="header"><span id="page"> Budget Holder </span></a>
+<a href="/" id="header"><span id="page"> <img src="assets/logo.png" alt="logo" id="logo"> </span></a>
 <router-outlet></router-outlet>
