--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -10,7 +10,7 @@
   </section>
   <section class="registerFormWrapper">
     <div class="w-full max-w-xs registerForm">
-      <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+      <form class="bg-white shadow-2xl rounded px-8 pt-6 pb-8 mb-4">
         <span class="bg-center text-gray-900 text-lg font-bold mb-4">Login</span>
         <div class="mb-4">
           <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
