register page backend

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@ $light-theme-background: #398AB9;
 $element-background : #EEEEEE;
 $beige-button-color: #D8D2CB;
 $blue-gray:#7C99AC;
+$red:#F64658;
+$orange:#FC6C3C;
+$white:#f4f8fb;
+
 
 
 @media screen and (max-width: 992px) {
