--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -1,1 +1,42 @@
-<p>register-page works!</p>
+<div class="bg-grey-lighter min-h-screen flex flex-col">
+  <img src="assets/blob.png" alt="blob">
+  <div class="container max-w-sm mx-auto flex-1 flex flex-col items-center justify-center px-2">
+    <form class="bg-white px-6 py-8 rounded shadow-md text-black w-full">
+      <h1 class="mb-8 text-3xl text-center">Sign up</h1>
+      <input
+        type="text"
+        class="block border border-grey-light w-full p-3 rounded mb-4"
+        name="fullname"
+        placeholder="Full Name"/>
+
+      <input
+        type="text"
+        class="block border border-grey-light w-full p-3 rounded mb-4"
+        name="email"
+        placeholder="Email"/>
+
+      <input
+        type="password"
+        class="block border border-grey-light w-full p-3 rounded mb-4"
+        name="password"
+        placeholder="Password"/>
+      <input
+        type="password"
+        class="block border border-grey-light w-full p-3 rounded mb-4"
+        name="confirm_password"
+        placeholder="Confirm Password"/>
+
+      <button
+        type="submit"
+        class="w-full text-center py-3 rounded bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline my-1"
+      >Create Account
+      </button>
+    </form>
+    <div class="text-grey-dark mt-6">
+      Already have an account?
+      <a class="no-underline border-b border-blue text-blue" href="/">
+        Log in
+      </a>.
+    </div>
+  </div>
+</div>
