--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -5,41 +5,93 @@
     <p>Hold-Budget is a free tool for save and control your money in an easy way. </p>
     <button type="button" id="registerBtn"
             class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-            onclick="location.href = 'register';">Register
+            onclick="location.href = 'register';">Go!
     </button>
   </section>
   <section class="registerFormWrapper">
     <div class="w-full max-w-xs registerForm">
-      <form class="bg-white shadow-2xl rounded px-8 pt-6 pb-8 mb-4">
-        <span class="bg-center text-gray-900 text-lg font-bold mb-4">Login</span>
-        <div class="mb-4">
-          <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
-            Username
-          </label>
-          <input
-            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="username" type="text" placeholder="Username">
-        </div>
-        <div class="mb-6">
-          <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
-            Password
-          </label>
-          <input
-            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-            id="passwordInput" type="password" placeholder="******************">
-          <p class="text-red-500 text-xs italic hidden" id="wrongPass">Please choose a password.</p>
-        </div>
-        <div class="flex items-center justify-between">
-          <button
-            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-            type="button" (click)="signingFunc()">
-            Sign In
-          </button>
-          <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
-            Forgot Password?
-          </a>
-        </div>
-      </form>
+      <mat-tab-group>
+        <mat-tab label="Log In">
+          <div class="w-full max-w-xs registerForm">
+            <form class="bg-white shadow-2xl rounded px-8 pt-6 pb-8 mb-4">
+              <span class="bg-center text-gray-900 text-lg font-bold mb-4">Login</span>
+              <div class="mb-4">
+                <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
+                  Username
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="username" type="text" placeholder="Username">
+              </div>
+              <div class="mb-6">
+                <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
+                  Password
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                  id="passwordInput" type="password" placeholder="******************">
+                <p class="text-red-500 text-xs italic hidden" id="wrongPass">Please choose a password.</p>
+              </div>
+              <div class="flex items-center justify-between">
+                <button
+                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                  type="button" (click)="signingFunc()">
+                  Sign In
+                </button>
+                <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
+                  Forgot Password?
+                </a>
+              </div>
+            </form>
+          </div>
+        </mat-tab>
+        <mat-tab label="Sıgn Up">
+            <div class="w-full max-w-xs registerForm">
+              <form class="bg-white shadow-2xl rounded px-8 pt-6 pb-8 mb-4">
+                <span class="bg-center text-gray-900 text-lg font-bold mb-4">Sign Up</span>
+                <div class="mb-4">
+                  <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
+                    User Name
+                  </label>
+                  <input
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="username2" type="text" placeholder="Username">
+                </div>
+                <div class="mb-4">
+                  <label class="block text-gray-500 text-sm font-bold mb-2" for="e-mail">
+                    E-mail
+                  </label>
+                  <input
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="e-mail" type="text" placeholder="e-mail">
+                </div>
+                <div class="mb-6">
+                  <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
+                    Password
+                  </label>
+                  <input
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                    id="passwordInput2" type="password" placeholder="******************">
+                </div>
+                <div class="mb-6">
+                  <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
+                    Confirm Password
+                  </label>
+                  <input
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                    id="confirmpasswordInput" type="password" placeholder="******************">
+                </div>
+                <div class="flex items-center justify-between">
+                  <button
+                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                    type="button" (click)="signingFunc()">
+                    Sign Up
+                  </button>
+                </div>
+              </form>
+            </div>
+        </mat-tab>
+      </mat-tab-group>
     </div>
   </section>
   <div class="bg">
