--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -3,12 +3,12 @@
 .registerFormWrapper {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 #landingWrapper {
   text-align: center;
   margin-top: 50px;
-  max-width: 600px;
   background-color: rgba(256,256,256, 0.1);
   #registerBtn {
     margin: 20px 0 20px 0;
@@ -68,13 +68,6 @@
 }
 
 @media screen and (min-width: 600px) {
-  #landingWrapper, .registerFormWrapper{
-    position: absolute;
-    top: 30%;
-  }
-  .registerFormWrapper{
-    left: 60%;
-  }
   .container{
     width: 1000px;
   }
