--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -9,8 +9,7 @@
     </button>
   </section>
   <section class="registerFormWrapper">
-    <div class="w-full max-w-xs registerForm">
-      <mat-tab-group>
+      <mat-tab-group [disableRipple]=true class="header-less-tabs">
         <mat-tab label="Log In">
           <div class="w-full max-w-xs registerForm">
             <form class="bg-white shadow-2xl rounded px-8 pt-6 pb-8 mb-4">
@@ -92,7 +91,6 @@
             </div>
         </mat-tab>
       </mat-tab-group>
-    </div>
   </section>
   <div class="bg">
 
