--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -4,6 +4,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  .header-less-tabs{
+    .mat-tab-label-active {
+      background-color: white !important;;
+    }
+  }
 }
 
 #landingWrapper {
