--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@700&family=Oxygen:wght@300;700&family=Pacifico&display=swap');/*Color Palette*/
 
+$black: #101820FF;
 $dark-theme-background : #1C658C;
 $light-theme-background: #398AB9;
 $element-background : #EEEEEE;
