--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 @import "src/styles";
+
 a {
   position: absolute;
   left: 1em;
@@ -13,14 +14,22 @@ a {
   height: 40px;
 }
 
-#logo{
-  height: 2rem;
+#logo {
+  height: 2.5rem;
 }
+
 @media screen and (max-width: 600px) {
-  a{
+  a {
     position: relative;
     width: 100%;
     display: flex;
     justify-content: center;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  a {
+    left: 3em;
+    top: 3em;
   }
 }
