--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,98 +1,106 @@
 <div class="container mx-auto">
-  <section id="landingWrapper" class="shadow-2xl rounded">
+  <section id="landingWrapper" class="shadow-2xl rounded welcoming gradientBack">
     <h1>Welcome to <span>Hold-Budget!</span></h1>
     <p>Controlling your money starts here!</p>
     <p>Hold-Budget is a free tool for save and control your money in an easy way. </p>
   </section>
-  <section class="registerFormWrapper shadow-2xl rounded">
-      <mat-tab-group class="header-less-tabs" [selectedIndex]="selectedIndex">
-        <mat-tab label="Log In">
-          <div class="w-full max-w-xs registerForm">
-            <form class="shadow-m rounded px-8 pt-6 pb-8 mb-4">
-              <span class="bg-center text-gray-900 text-lg font-bold mb-4">Login</span>
-              <div class="mb-4">
-                <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
-                  Username
-                </label>
-                <input
-                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                  id="username" type="text" placeholder="Username">
-              </div>
-              <div class="mb-6">
-                <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
-                  Password
-                </label>
-                <input
-                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-                  id="passwordInput" type="password" placeholder="******************">
-                <p class="text-red-500 text-xs italic hidden" id="wrongPass">Please choose a password.</p>
-              </div>
-              <div class="flex items-center justify-between">
-                <button
-                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                  type="button" (click)="signingFunc()">
-                  Sign In
-                </button>
-                <button
-                  class="bg-white-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                  type="button" (click)="selectTab(1)">
-                  Register
-                </button>
-              </div>
-            </form>
-          </div>
-        </mat-tab>
-        <mat-tab label="Sıgn Up">
-            <div class="w-full max-w-xs registerForm">
-              <form class="shadow-m rounded px-8 pt-6 pb-8 mb-4">
-                <span class="bg-center text-gray-900 text-lg font-bold mb-4">Sign Up</span>
-                <div class="mb-4">
-                  <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
-                    User Name
-                  </label>
-                  <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="username2" type="text" placeholder="Username">
-                </div>
-                <div class="mb-4">
-                  <label class="block text-gray-500 text-sm font-bold mb-2" for="e-mail">
-                    E-mail
-                  </label>
-                  <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="e-mail" type="text" placeholder="e-mail">
-                </div>
-                <div class="mb-6">
-                  <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
-                    Password
-                  </label>
-                  <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-                    id="passwordInput2" type="password" placeholder="******************">
-                </div>
-                <div class="mb-6">
-                  <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
-                    Confirm Password
-                  </label>
-                  <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-                    id="confirmpasswordInput" type="password" placeholder="******************">
-                </div>
-                <div class="flex items-center justify-between">
-                  <button
-                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    type="button" (click)="signingFunc()">
-                    Sign Up
-                  </button>
-                  <button
-                    class="bg-white-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    type="button" (click)="selectTab(0)">
-                    Login
-                  </button>
-                </div>
-              </form>
+  <section class="shadow-2xl rounded welcoming bg-grey-200 text-white gradientBorder">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cum cupiditate dicta esse harum hic illum ipsa,
+    laborum, libero natus nisi, quas qui quibusdam quidem sed sint sit temporibus veritatis?
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolorum magnam minus nobis, nostrum quos
+    recusandae. Distinctio eaque officia quod reiciendis. Dicta fugiat ipsum maxime nisi odio quaerat, qui repellat!
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequuntur dignissimos dolorem enim eos facilis fuga
+    inventore ipsa ipsum laudantium natus nostrum numquam odit optio possimus provident quibusdam tempore, temporibus!
+  </section>
+  <section class="registerFormWrapper shadow-2xl rounded gradientBack">
+    <mat-tab-group class="header-less-tabs" [selectedIndex]="selectedIndex">
+      <mat-tab label="Log In">
+        <div class="w-full max-w-xs registerForm">
+          <form class="shadow-m rounded px-8 pt-6 pb-8 mb-4">
+            <span class="bg-center text-gray-900 text-lg font-bold mb-4">Login</span>
+            <div class="mb-4">
+              <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
+                Username
+              </label>
+              <input
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                id="username" type="text" placeholder="Username">
             </div>
-        </mat-tab>
-      </mat-tab-group>
+            <div class="mb-6">
+              <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
+                Password
+              </label>
+              <input
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                id="passwordInput" type="password" placeholder="******************">
+              <p class="text-red-500 text-xs italic hidden" id="wrongPass">Please choose a password.</p>
+            </div>
+            <div class="flex items-center justify-between">
+              <button
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="button" (click)="signingFunc()">
+                Sign In
+              </button>
+              <button
+                class="hover:text-red-800 text-red-700 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="button" (click)="selectTab(1)">
+                Register
+              </button>
+            </div>
+          </form>
+        </div>
+      </mat-tab>
+      <mat-tab label="Sıgn Up">
+        <div class="w-full max-w-xs registerForm">
+          <form class="shadow-m rounded px-8 pt-6 pb-8 mb-4">
+            <span class="bg-center text-gray-900 text-lg font-bold mb-4">Sign Up</span>
+            <div class="mb-4">
+              <label class="block text-gray-500 text-sm font-bold mb-2" for="username">
+                User Name
+              </label>
+              <input
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                id="username2" type="text" placeholder="Username">
+            </div>
+            <div class="mb-4">
+              <label class="block text-gray-500 text-sm font-bold mb-2" for="e-mail">
+                E-mail
+              </label>
+              <input
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                id="e-mail" type="text" placeholder="e-mail">
+            </div>
+            <div class="mb-6">
+              <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
+                Password
+              </label>
+              <input
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                id="passwordInput2" type="password" placeholder="******************">
+            </div>
+            <div class="mb-6">
+              <label class="block text-gray-500 text-sm font-bold mb-2" for="passwordInput">
+                Confirm Password
+              </label>
+              <input
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                id="confirmpasswordInput" type="password" placeholder="******************">
+            </div>
+            <div class="flex items-center justify-between">
+              <button
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="button" (click)="signingFunc()">
+                Sign Up
+              </button>
+              <button
+                class="hover:text-red-800 text-red-700 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="button" (click)="selectTab(0)">
+                Login
+              </button>
+            </div>
+          </form>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
   </section>
 </div>
