--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -56,7 +56,17 @@ body {
   opacity: 1;
 }
 
-.registerFormWrapper, #landingWrapper {
+.gradientBorder {
+  border-width: 5px;
+  border-style: solid;
+  border-image: linear-gradient(
+      to bottom,
+      #d16ba5,
+      #5ffbf1
+  ) 1 100%;
+}
+
+.gradientBack {
   z-index: -1;
   top: 0;
   left: 0;
@@ -76,7 +86,7 @@ body {
   .registerFormWrapper {
     width: 300px;
     height: 500px;
-    position: absolute;
+    position: fixed;
     left: 60vw;
     top: 22vh;
   }
