--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,16 +1,20 @@
 <div class="container mx-auto">
-  <section id="landingWrapper" class="shadow-2xl rounded welcoming gradientBack">
-    <h1>Welcome to <span>Hold-Budget!</span></h1>
-    <p>Controlling your money starts here!</p>
-    <p>Hold-Budget is a free tool for save and control your money in an easy way. </p>
-  </section>
-  <section class="shadow-2xl rounded welcoming bg-grey-200 text-white gradientBorder">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cum cupiditate dicta esse harum hic illum ipsa,
-    laborum, libero natus nisi, quas qui quibusdam quidem sed sint sit temporibus veritatis?
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolorum magnam minus nobis, nostrum quos
-    recusandae. Distinctio eaque officia quod reiciendis. Dicta fugiat ipsum maxime nisi odio quaerat, qui repellat!
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequuntur dignissimos dolorem enim eos facilis fuga
-    inventore ipsa ipsum laudantium natus nostrum numquam odit optio possimus provident quibusdam tempore, temporibus!
+  <section id="landingWrapper" class="shadow-2xl rounded">
+    <div id="WelocomingFirst" class="gradientBack">
+      <h1>Welcome to <span>Hold-Budget!</span></h1>
+      <p>Controlling your money starts here!</p>
+      <p>Hold-Budget is a free tool for save and control your money in an easy way. </p>
+    </div>
+    <div class="gradientBorder">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cum cupiditate dicta esse harum hic illum
+      ipsa,
+      laborum, libero natus nisi, quas qui quibusdam quidem sed sint sit temporibus veritatis?
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolorum magnam minus nobis, nostrum quos
+      recusandae. Distinctio eaque officia quod reiciendis. Dicta fugiat ipsum maxime nisi odio quaerat, qui repellat!
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequuntur dignissimos dolorem enim eos facilis
+      fuga
+      inventore ipsa ipsum laudantium natus nostrum numquam odit optio possimus provident quibusdam tempore, temporibus!
+    </div>
   </section>
   <section class="registerFormWrapper shadow-2xl rounded gradientBack">
     <mat-tab-group class="header-less-tabs" [selectedIndex]="selectedIndex">
