--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -24,12 +24,21 @@ body {
   top: 20px;
   padding: 20px;
 
+  > div {
+    padding: 20px;
+  }
+
+  div:not(:first-child) {
+    color: $white;
+  }
+
+
   #registerBtn {
     margin: 20px 0 20px 0;
   }
 
   h1 {
-    font-size: 45px;
+    font-size: 55px;
     font-family: 'Bodoni Moda', serif;
     margin: 0.25rem;
   }
@@ -77,17 +86,18 @@ body {
 
 
 @media screen and (min-width: 800px) {
-  #landingWrapper {
+  #landingWrapper, #welcoming {
     height: 200px;
     position: absolute;
-    left: 6vw;
+    left: 15vw;
     top: 30vh;
+    max-width: 800px;
   }
   .registerFormWrapper {
     width: 300px;
     height: 500px;
     position: fixed;
-    left: 60vw;
+    left: 65vw;
     top: 22vh;
   }
 }
