--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,11 +1,11 @@
 <div class="container mx-auto">
   <section id="landingWrapper" class="shadow-2xl rounded">
-    <div id="WelocomingFirst" class="gradientBack">
+    <div id="WelocomingFirst" class="gradientBack shadow-2xl rounded">
       <h1>Welcome to <span>Hold-Budget!</span></h1>
       <p>Controlling your money starts here!</p>
       <p>Hold-Budget is a free tool for save and control your money in an easy way. </p>
     </div>
-    <div class="gradientBorder">
+    <div class="gradientBorder shadow-2xl rounded">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cum cupiditate dicta esse harum hic illum
       ipsa,
       laborum, libero natus nisi, quas qui quibusdam quidem sed sint sit temporibus veritatis?
