--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
       <p>Controlling your money starts here!</p>
       <p>Hold-Budget is a free tool for save and control your money in an easy way. </p>
     </div>
-    <div class="gradientBorder shadow-2xl rounded" id="WelocomingSecond">
+    <div class="gradientBorder shadow-2xl rounded" id="WelcomingSecond">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cum cupiditate dicta esse harum hic illum
       ipsa,
       laborum, libero natus nisi, quas qui quibusdam quidem sed sint sit temporibus veritatis?
