--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -97,7 +97,9 @@ body {
   }
   #WelcomingFirst {
     opacity: 1;
-    transition: opacity 0.5s;
+    transition: opacity 0.7s;
+    transition-delay: 0.5ms;
+    overflow: hidden;
   }
   .registerFormWrapper {
     width: 300px;
@@ -106,9 +108,10 @@ body {
     left: 65vw;
     top: 22vh;
   }
-  #WelocomingSecond {
+  #WelcomingSecond {
+    margin-top: -27vh;
     opacity: 0.0;
-    transition: opacity 0.5s, top 0.5s;
+    transition: opacity 0.7s, top 0.7s;
   }
 }
 
