--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,19 +1,9 @@
-<div class="container mx-auto">
+<section class="container mx-auto">
   <section id="landingWrapper" class="shadow-2xl rounded">
     <div id="WelcomingFirst" class="gradientBack shadow-2xl rounded">
       <h1>Welcome to <span>Hold-Budget!</span></h1>
       <p>Controlling your money starts here!</p>
       <p>Hold-Budget is a free tool for save and control your money in an easy way. </p>
-    </div>
-    <div class="gradientBorder shadow-2xl rounded" id="WelcomingSecond">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cum cupiditate dicta esse harum hic illum
-      ipsa,
-      laborum, libero natus nisi, quas qui quibusdam quidem sed sint sit temporibus veritatis?
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolorum magnam minus nobis, nostrum quos
-      recusandae. Distinctio eaque officia quod reiciendis. Dicta fugiat ipsum maxime nisi odio quaerat, qui repellat!
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequuntur dignissimos dolorem enim eos facilis
-      fuga
-      inventore ipsa ipsum laudantium natus nostrum numquam odit optio possimus provident quibusdam tempore, temporibus!
     </div>
   </section>
   <section class="registerFormWrapper shadow-2xl rounded gradientBack">
@@ -107,7 +97,17 @@
       </mat-tab>
     </mat-tab-group>
   </section>
-</div>
+    <div class="custom-shape-divider-bottom-1647463400">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+        <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+        <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+      </svg>
+    </div>
+</section>
+<section class="containerSecond">
+
+</section>
 <div class="text-center fixed-bottom place-self-end" id="bounce">
   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#EEEEEE" class="bi bi-arrow-down-short"
        viewBox="0 0 16 16">
