--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -4,6 +4,10 @@ body {
   background-color: $black;
 }
 
+.container{
+  height: 100vh;
+  width: 100vw;
+}
 .registerFormWrapper {
   border: $white 2px solid;
   overflow: hidden;
@@ -150,6 +154,27 @@ body {
   100% {
     background-position: 0 50%;
   }
+}
+
+.custom-shape-divider-bottom-1647463400 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1647463400 svg {
+  position: relative;
+  display: block;
+  width: calc(300% + 1.3px);
+  height: 50px;
+}
+
+.custom-shape-divider-bottom-1647463400 .shape-fill {
+  fill: $white;
 }
 
 // Main page bouncing arrow
